just_arrived.css
body{
  background-color:#faf4f1;
/*  background-color:#e9edf4;*/
  color:#222;
  font-family:helvetica, arial, sans;
  font-family: Raleway;
  margin:0; padding:0;
  font-size:1.1em;
}

.header{
  /*width:100%;
  background-color:#39c;
  text-align:center;
  padding:1em 0;
  margin:0;
  margin-bottom:2em;*/
  margin:0;
  padding:0;
  display:block;
}
h1 {
  padding: 5px 0 0 0;
}

a {
  color: #DB5858;
}

h1 a {
  display: block;
  width: 200px;
  text-align: center;
  margin: 10px auto 30px;
  font-size: 29px;
  text-indent: -9999px;
  background: transparent url("./justarrived.png") no-repeat left bottom; 
}

p {
  font-size: 16px;
  line-height: 24px;
  color: #666;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  text-align: left;
  background: white;
  font-size: 14px;
}

li {
  padding: 10px;
  border-bottom: thin solid #faf4f1;
  border-top: thin solid #fcfcfc;
}
li:first-child {
  border-top: none;
}
li:last-child {
  border-bottom: none;
}

li span {
  font-weight: bold;
  font-size: 16px;
}
li span.timeAgo {
  font-weight: normal;
  font-size: 13px;
  color: #999;
  float: right;
}

.content {
  margin: 0 auto;
  width: 100%;
  padding: 0 0 20px 0;
  font-weight:lighter;
  text-align:center;
}

.wrapper {
  margin:0 auto;
  width: 300px;
}

.attendee-list {
  width: 860px;
}

form {
  position: relative;
  text-align: center;
  margin: 0 auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 286px;
  max-width: 100%;
}
label {
  font-size: 14px;
  margin-bottom: 2px;
  float: left;
  margin-left: -9px;
  color: #666;
}
input[type="text"],
input[type="email"],
input[type="password"],
input[type="number"] {
  width: 100%;
  padding: 14px;
  margin-bottom: 18px;
  margin-left:-14px;
  font-size: 18px;
  font-family: "Open Sans","Helvetica Neue",helvetica,sans-serif;
  color: #444;
  border: none;
  background-color: #fff;
  -webkit-border-radius: 1px;
  -moz-border-radius: 1px;
  -ms-border-radius: 1px;
  -o-border-radius: 1px;
  border-radius: 1px;
  -webkit-box-shadow: inset rgba(0,0,0,0.2) 0 2px 3px;
  -moz-box-shadow: inset rgba(0,0,0,0.2) 0 2px 3px;
  box-shadow: inset rgba(0,0,0,0.2) 0 2px 3px;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -webkit-appearance: none;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="password"]:focus,
input[type="number"]:focus {
  outline:none;
  background-color:#f6fdff;
}

button, a.button {
  display: -moz-inline-stack;
  display: inline-block;
  vertical-align: middle;
  zoom: 1;
  padding: 15px 25px 16px 25px;
  margin-top:10px;
  line-height: 1em;
  font-size: 18px;
  color: #fff;
  border: 0;
  text-shadow: rgba(0,0,0,0.2) 0 -1px 0;
  cursor: pointer;
  text-decoration: none;
/*  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5da4ff), color-stop(100%, #4589e3)),#5aa0fb;
  background: -webkit-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
  background: -moz-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
  background: -o-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
  background: linear-gradient(#5da4ff,#4589e3),#5aa0fb;*/
  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #DB5858), color-stop(100%, #BA585E)),#DB5858;
  background: -webkit-linear-gradient(#DB5858,#BA585E),#DB5858;
  background: -moz-linear-gradient(#DB5858,#BA585E),#DB5858;
  background: -o-linear-gradient(#DB5858,#BA585E),#DB5858;
  background: linear-gradient(#DB5858,#BA585E),#DB5858;
  width: 314px;
  margin-left: -14px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: rgba(0,0,0,0.2) 0 1px 2px;
  -moz-box-shadow: rgba(0,0,0,0.2) 0 1px 2px;
  box-shadow: rgba(0,0,0,0.2) 0 1px 2px;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

a.button {
  width: 200px;
  margin-left: 0;
}

button:active, a.button:active {
  -webkit-box-shadow: inset rgba(0,0,0,0.55) 0 1px 5px;
  -moz-box-shadow: inset rgba(0,0,0,0.55) 0 1px 5px;
  box-shadow: inset rgba(0,0,0,0.55) 0 1px 5px;
}

.mask {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0px;
    left: 0px;
    background-color: #000000;
    opacity: .4;
    z-index: 1;
}

.footer {
/*  background-color:#3e464d;
  position:fixed;
  bottom:0;
  width:40em;
  margin:0 auto;
  font-size:50%;*/
  margin: 0 auto;
  padding: 20px 0 40px 0;
  font-size: 12px;
  text-align: center;
  width: 300px;
  max-width: 100%;
}
/*.footer a{
  color:#666;
  text-decoration:none;
}*/
.footer p {
  font-size: 12px;
}

.admin-footer {
  margin-top: 20px;
}

.error p {
  margin-top: 0;
  color:#DB5858;
}


table{
  border:1px solid #ddd;
  border-left: 0;
  border-collapse: separate;
  border-spacing: 0;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  font-size: 14px;
  width: 860px;
/*  margin-left: -280px;*/
}
table thead {
  background: #DB5858;
  color: white;
}
table th, table td {
  padding: 8px;
  line-height: 24px;
  text-align: left;
  vertical-align: top;
  border-top: 1px solid #ddd;
  font-weight: 300;
}
table th {
  border-left: 1px solid #ddd;
  text-align: center;
}
table td {
  border-left: 1px solid #ddd;
}
table tbody tr:nth-child(odd) td {
  background-color: #f9f9f9;
}
table thead:first-child tr:first-child th {
  border-top: 0;
}
table thead:first-child tr:first-child th:first-child {
  -webkit-border-radius: 4px 0 0 0;
  -moz-border-radius: 4px 0 0 0;
  border-radius: 4px 0 0 0;
}

table thead:first-child tr:first-child th:last-child {
  -webkit-border-radius: 0 4px 0 0;
  -moz-border-radius: 0 4px 0 0;
  border-radius: 0 4px 0 0;
}

.mobile {
  display:none;
}

/* for high resolution display */

@media only screen and (min--moz-device-pixel-ratio: 2),
only screen and (-o-min-device-pixel-ratio: 2/1),
only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (min-device-pixel-ratio: 2) {
  h1 {
    background: transparent url("./justarrived2x.png") no-repeat left bottom;
    background-size: 200px 29px;
  }
}

@media only screen and (max-width: 860px) {
  .attendee-list {
    width: 100%;
  }
  table, h2 {
    display: none;
  }
  .mobile {
    display:block;
  }
}

